[gd_scene load_steps=20 format=2]

[ext_resource path="res://regex_rule/regex_rule.gd" type="Script" id=1]
[ext_resource path="res://regex_rule/delete_rule/minus.png" type="Texture" id=2]
[ext_resource path="res://regex_rule/delete_rule/minus_down.png" type="Texture" id=3]
[ext_resource path="res://regex_rule/delete_rule/minus_hover.png" type="Texture" id=4]
[ext_resource path="res://regex_rule/add_rule/plus.png" type="Texture" id=5]
[ext_resource path="res://regex_rule/add_rule/plus_down.png" type="Texture" id=6]
[ext_resource path="res://regex_rule/add_rule/plus_hover.png" type="Texture" id=7]
[ext_resource path="res://regex_rule/rule_visibility/visible_indicator.png" type="Texture" id=8]
[ext_resource path="res://regex_rule/rule_visibility/visible_indicator_hover.png" type="Texture" id=9]
[ext_resource path="res://regex_rule/rule_visibility/invisible_indicator.png" type="Texture" id=10]
[ext_resource path="res://regex_rule/regex_valid_indicator.png" type="Texture" id=11]
[ext_resource path="res://explorer/validation_indicator.gd" type="Script" id=12]
[ext_resource path="res://regex_rule/rule_swap_direction/rule_swap_direction.png" type="Texture" id=13]
[ext_resource path="res://regex_rule/rule_swap_direction/rule_swap_direction_down.png" type="Texture" id=14]
[ext_resource path="res://regex_rule/rule_swap_direction/rule_swap_direction_hover.png" type="Texture" id=15]
[ext_resource path="res://regex_rule/move_rule/move_handle_hover.png" type="Texture" id=16]
[ext_resource path="res://regex_rule/move_rule/move_handle.png" type="Texture" id=17]
[ext_resource path="res://regex_rule/move_rule/move_handle_down.png" type="Texture" id=18]
[ext_resource path="res://regex_rule/drag_regex_handle.gd" type="Script" id=19]

[node name="RegexRule" type="HBoxContainer"]
anchor_right = 1.0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragRegexHandle" type="TextureButton" parent="."]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 19.0
hint_tooltip = "Reorder this regex rule."
focus_mode = 0
mouse_default_cursor_shape = 13
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 18 )
script = ExtResource( 19 )

[node name="ReviewRuleRollover" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 3.0
margin_right = 36.0
margin_bottom = 19.0
hint_tooltip = "Rollover to review changes made up to this point. Click to toggle this specific rule on and off."
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )

[node name="ValidRegexIndicator" type="TextureRect" parent="."]
margin_left = 40.0
margin_top = 3.0
margin_right = 56.0
margin_bottom = 19.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 11 )
script = ExtResource( 12 )

[node name="RegexLineEdit" type="LineEdit" parent="."]
margin_left = 60.0
margin_right = 510.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = "Regular Expression"
caret_blink = true
caret_blink_speed = 0.5

[node name="SwapRuleDirectionButton" type="TextureButton" parent="."]
margin_left = 514.0
margin_top = 3.0
margin_right = 530.0
margin_bottom = 19.0
hint_tooltip = "Swap the regular expression with the replacement text."
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 14 )

[node name="ReplacementLineEdit" type="LineEdit" parent="."]
margin_left = 534.0
margin_right = 984.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = "Replacement Text"
caret_blink = true
caret_blink_speed = 0.5

[node name="AddNewRegexButton" type="TextureButton" parent="."]
margin_left = 988.0
margin_top = 3.0
margin_right = 1004.0
margin_bottom = 19.0
hint_tooltip = "Add a new regex rule."
focus_mode = 0
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )

[node name="DeleteRegexButton" type="TextureButton" parent="."]
margin_left = 1008.0
margin_top = 3.0
margin_right = 1024.0
margin_bottom = 19.0
hint_tooltip = "Delete this regex rule."
focus_mode = 0
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )

[node name="RegexCompileTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="mouse_entered" from="ReviewRuleRollover" to="." method="_on_ReviewRuleRollover_mouse_entered"]
[connection signal="mouse_exited" from="ReviewRuleRollover" to="." method="_on_ReviewRuleRollover_mouse_exited"]
[connection signal="pressed" from="ReviewRuleRollover" to="." method="_on_ReviewRuleRollover_pressed"]
[connection signal="text_changed" from="RegexLineEdit" to="." method="_on_RegexLineEdit_text_changed"]
[connection signal="pressed" from="SwapRuleDirectionButton" to="." method="_on_SwapRuleDirectionButton_pressed"]
[connection signal="text_changed" from="ReplacementLineEdit" to="." method="_on_ReplacementLineEdit_text_changed"]
[connection signal="pressed" from="AddNewRegexButton" to="." method="_on_AddNewRegexButton_pressed"]
[connection signal="pressed" from="DeleteRegexButton" to="." method="_on_DeleteRegexButton_pressed"]
[connection signal="timeout" from="RegexCompileTimer" to="." method="_on_RegexCompileTimer_timeout"]
